fixed nav on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,7 @@ h4 {
       }
   
 nav{
+    
     position: fixed;
     right: 30px;
     top: 80px;
@@ -278,7 +279,7 @@ footer a{
    
 
     nav{
-        left: 0;
+        left: 5px;
         top: 30px;
     }
 }
